--- a/config/database.yml
+++ b/config/database.yml
@@ -21,5 +21,9 @@ test:
   database: db/test.sqlite3
 
 production:
-  <<: *default
-  database: db/production.sqlite3
+  adapter: postgresql
+  encoding: unicode
+  database: stratus_production_database
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
+  username: stratus
+  password: <%= ENV["STRATUS_DATABASE_PASSWORD"] %>
